# Sonoff-Tasmota

./: .gitignore  .gitignore.orig  CMakeLists.txt  analyser.logicsettings  cov_xml.xml  platformio.ini  platformio.ini.orig
lib/AsyncTelegram-1.0.6/examples/sendPhotoESP32/sendPhoto_FFAT/: sendPhoto_FFAT.ino
lib/AsyncTelegram-1.0.6/examples/sendPhotoESP32/sendPhoto_SPIFFS/: sendPhoto_SPIFFS.ino
lib/AsyncTelegram-1.0.6/examples/sendPhotoESP8266/: sendPhotoESP8266.ino
lib/AsyncTelegram-1.0.6/src/: AsyncTelegram.cpp  AsyncTelegram.h  InlineKeyboard.cpp
lib/DistanceMeasure-0.0.1/: .library.json  library.properties
lib/DistanceMeasure-0.0.1/src/: distance.cpp  distance.h  logging.h
lib/GardenControl-0.0.1/src/: images.cpp  images.h  logging.h  view.cpp  view.h
lib/xControl-0.0.1/: .clang-format  .library.json  CMakeLists.txt  CMakeLists.txt.in  library.properties
lib/xControl-0.0.1/bmp/: Humidity.pdn  pressure.pdn  splash.pdn  temperatur.pdn  xview_status.pdn
lib/xControl-0.0.1/data/: evaluation.ods  set1_clear.txt  set2_clear.txt  set3_clear.txt  set4_clear.txt  set5_clear.txt  set6_clear.txt  set7_clear.txt  set8_clear.txt  set9_clear.txt
lib/xControl-0.0.1/mqttInfluxdbBridge/: dependency.txt  main.py
lib/xControl-0.0.1/src/: CMakeLists.txt  StateControl.h  common.h  images.cpp  images.h  label.cpp  label.h  level.cpp  level.h  logging.cpp  logging.h  view.cpp  view.h  viewable.cpp  viewable.h  x_support.h  x_support_BACKUP_17744.h
lib/xControl-0.0.1/tst/: CMakeLists.txt  label_unittest.cpp  mock_renderer.h  mock_tasmota.cpp  mock_tasmota.h  renderer.h  time.cpp  time_unittest.cpp  wstring.h
lib/xControl-0.0.1/tst/inc/: renderer.h  wstring.h
lib/xControl-0.0.1/tst/mocks/: mock_StateControl.h  mock_renderer.h  tasmota.cpp  tasmota.h
lib/xControl-0.0.1/tst/src/: StateControl.cpp  label.cpp  time.cpp  view_unittest.cpp
sonoff/: _changelog.ino  gc_support.ino  my_user_config.h  settings.ino  sonoff_post.h  support.ino  support_features.ino  x_support.h  x_support.ino  xdrv_01_webserver.ino  xdrv_90_xview.ino  xdrv_98_deepsleep.ino  xdsp_02_ssd1306.ino  xsns_44_distance.ino  xsns_91_distance.ino  xsns_support.h  xsns_support.ino
sonoff/language/: bg-BG.h  cs-CZ.h  de-DE.h  el-GR.h  en-GB.h  es-ES.h  fr-FR.h  he-HE.h  hu-HU.h  it-IT.h  ko-KO.h  nl-NL.h  pl-PL.h  pt-BR.h  pt-PT.h  ru-RU.h  sk-SK.h  sv-SE.h  tr-TR.h  uk-UK.h  zh-CN.h  zh-TW.h
tasmota/: _dataToAnalyse.txt  my_user_config.h  support_tasmota.ino  x_support.ino  xdrv_40_telegram.ino  xdrv_90_xview.ino  xdsp_02_ssd1306.ino  xsns_09_bmp.ino  xsns_45_vl53l0x.ino  xsns_support.h  xsns_support.ino
